# Player-FFmpeg-SDL2

./: AudioDecodeThread.h  AudioPlay.cpp  AudioPlay.h  CMakeLists.txt  FFmpegPlayer.h  FFmpegPlayerCtx.h  README.md  RenderView.cpp  RenderView.h  SDLApp.cpp  SDLApp.h  ThreadBase.h  main.cpp
include/: DemuxThread.h  FFmpegPlayer.h  FFmpegPlayerCtx.h  PacketQueue.h  Timer.h  VideoDecodeThread.h
src/: AudioDecodeThread.cpp  DemuxThread.cpp  FFmpegPlayer.cpp  PacketQueue.cpp  Timer.cpp  VideoDecodeThread.cpp
